add_library(glm STATIC)

set_target_properties(glm PROPERTIES LINKER_LANGUAGE CXX)

# Include directories

target_include_directories(glm PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/
)

# Source files

target_sources(glm PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/common.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/_features.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/_fixes.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/_noise.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/_swizzle.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/_swizzle_func.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/_vectorize.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/compute_common.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/compute_vector_decl.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/compute_vector_relational.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_common.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_common_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_exponential.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_exponential_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_geometric.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_geometric_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_integer.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_integer_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_matrix.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_matrix_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_packing.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_packing_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_trigonometric.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_trigonometric_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_vector_relational.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/func_vector_relational_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/glm.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/qualifier.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/setup.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_float.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_half.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_half.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat2x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat2x2.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat2x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat2x3.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat2x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat2x4.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat3x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat3x2.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat3x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat3x3.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat3x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat3x4.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat4x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat4x2.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat4x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat4x3.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat4x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat4x4.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_mat4x4_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_quat.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_quat.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_quat_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec1.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec1.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec2.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec3.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec4.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/detail/type_vec4_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/exponential.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/_matrix_vectorize.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_clip_space.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_clip_space.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_common.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_common.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double2x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double2x2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double2x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double2x3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double2x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double2x4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double3x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double3x2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double3x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double3x3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double3x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double3x4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double4x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double4x2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double4x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double4x3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double4x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_double4x4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float2x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float2x2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float2x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float2x3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float2x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float2x4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float3x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float3x2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float3x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float3x3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float3x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float3x4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float4x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float4x2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float4x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float4x3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float4x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_float4x4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int2x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int2x2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int2x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int2x3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int2x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int2x4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int3x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int3x2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int3x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int3x3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int3x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int3x4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int4x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int4x2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int4x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int4x3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int4x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_int4x4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_integer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_integer.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_projection.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_projection.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_relational.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_relational.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_transform.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_transform.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint2x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint2x2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint2x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint2x3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint2x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint2x4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint3x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint3x2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint3x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint3x3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint3x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint3x4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint4x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint4x2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint4x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint4x3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint4x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/matrix_uint4x4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_common.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_common.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_common_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_double.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_double_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_exponential.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_exponential.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_float.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_float_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_geometric.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_geometric.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_relational.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_relational.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_transform.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_transform.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_trigonometric.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/quaternion_trigonometric.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_common.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_common.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_constants.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_constants.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_int_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_integer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_integer.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_packing.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_packing.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_reciprocal.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_reciprocal.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_relational.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_relational.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_uint_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_ulp.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/scalar_ulp.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool1.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool1_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_bool4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_common.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_common.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double1.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double1_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_double4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float1.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float1_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float2_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float3_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_float4_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int1.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int1_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_int4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_integer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_integer.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_packing.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_packing.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_reciprocal.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_reciprocal.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_relational.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_relational.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint1.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint1_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint2_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint3_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_uint4_sized.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_ulp.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/ext/vector_ulp.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/fwd.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/geometric.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/glm.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/bitfield.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/bitfield.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/color_space.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/color_space.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/constants.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/constants.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/epsilon.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/epsilon.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/integer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/integer.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/matrix_access.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/matrix_access.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/matrix_integer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/matrix_inverse.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/matrix_inverse.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/matrix_transform.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/matrix_transform.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/noise.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/noise.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/packing.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/packing.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/quaternion.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/quaternion.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/quaternion_simd.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/random.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/random.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/reciprocal.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/round.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/round.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/type_aligned.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/type_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/type_precision.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/type_ptr.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/type_ptr.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/ulp.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/ulp.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtc/vec1.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/associated_min_max.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/associated_min_max.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/bit.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/bit.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/closest_point.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/closest_point.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/color_encoding.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/color_encoding.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/color_space.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/color_space.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/color_space_YCoCg.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/color_space_YCoCg.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/common.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/common.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/compatibility.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/compatibility.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/component_wise.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/component_wise.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/dual_quaternion.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/dual_quaternion.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/easing.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/easing.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/euler_angles.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/euler_angles.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/extend.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/extend.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/extended_min_max.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/extended_min_max.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/exterior_product.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/exterior_product.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/fast_exponential.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/fast_exponential.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/fast_square_root.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/fast_square_root.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/fast_trigonometry.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/fast_trigonometry.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/float_notmalize.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/functions.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/functions.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/gradient_paint.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/gradient_paint.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/handed_coordinate_space.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/handed_coordinate_space.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/hash.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/hash.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/integer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/integer.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/intersect.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/intersect.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/io.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/io.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/log_base.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/log_base.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_cross_product.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_cross_product.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_decompose.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_decompose.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_factorisation.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_factorisation.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_interpolation.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_interpolation.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_major_storage.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_major_storage.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_operation.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_operation.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_query.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_query.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_transform_2d.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/matrix_transform_2d.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/mixed_product.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/mixed_product.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/norm.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/norm.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/normal.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/normal.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/normalize_dot.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/normalize_dot.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/number_precision.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/optimum_pow.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/optimum_pow.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/orthonormalize.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/orthonormalize.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/pca.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/pca.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/perpendicular.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/perpendicular.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/polar_coordinates.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/polar_coordinates.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/projection.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/projection.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/quaternion.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/quaternion.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/range.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/raw_data.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/raw_data.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/rotate_normalized_axis.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/rotate_normalized_axis.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/rotate_vector.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/rotate_vector.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/scalar_multiplication.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/scalar_relational.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/scalar_relational.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/spline.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/spline.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/std_based_type.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/std_based_type.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/string_cast.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/string_cast.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/texture.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/texture.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/transform.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/transform.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/transform2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/transform2.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/type_aligned.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/type_aligned.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/type_trait.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/type_trait.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/vec_swizzle.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/vector_angle.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/vector_angle.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/vector_query.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/vector_query.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/wrap.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/gtx/wrap.inl
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/integer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat2x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat2x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat2x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat3x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat3x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat3x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat4x2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat4x3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/mat4x4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/matrix.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/packing.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/trigonometric.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/vec2.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/vec3.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/vec4.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/glm/glm/vector_relational.hpp
)

# Macro Definitions

target_compile_definitions(glm PUBLIC GLM_ENABLE_EXPERIMENTAL)
