# Setup options

set(GLM_BUILD_LIBRARY ON)
set(GLM_BUILD_TESTS OFF)
set(GLM_BUILD_INSTALL OFF)

set(GLM_ENABLE_LANG_EXTENSIONS OFF)
set(GLM_DISABLE_AUTO_DETECTION OFF)

set(GLM_ENABLE_CXX_98 OFF)
set(GLM_ENABLE_CXX_11 OFF)
set(GLM_ENABLE_CXX_14 OFF)
set(GLM_ENABLE_CXX_17 OFF)
set(GLM_ENABLE_CXX_20 ON)

set(GLM_ENABLE_FAST_MATH OFF)
set(GLM_ENABLE_SIMD_SSE2 OFF)
set(GLM_ENABLE_SIMD_SSE3 OFF)
set(GLM_ENABLE_SIMD_SSSE3 OFF)
set(GLM_ENABLE_SIMD_SSE4_1 OFF)
set(GLM_ENABLE_SIMD_SSE4_2 OFF)
set(GLM_ENABLE_SIMD_AVX OFF)
set(GLM_ENABLE_SIMD_AVX2 OFF)
set(GLM_FORCE_PURE OFF)

# Fix the missing policy

set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

# Add the glm CMakeLists

add_subdirectory(glm)